# weekly_paner_devops

./: .gitignore  Jenkinsfile  README.md  app.py  pyproject.toml  sonar-project.properties
app/: __init__.py  db.py  routes.py
db/: schema.sql  seed.sql
load/: planner_load.js
report/: e2e-report.xml  load-report.html  report.html
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/e2e/: test_user_journey.py
tests/unit/: test_health.py
